fixed padding on smallest screen on view-edit screen

--- a/django/website/media/less/internews.less
+++ b/django/website/media/less/internews.less
@@ -36,7 +36,7 @@ body {
     }
 }
 
-@media(min-width:@screen-xs-min) {
+@media(max-width:@screen-xs-min) {
   #page-wrapper {
     margin-top:50px;
     padding:0 @padding-large-horizontal;
@@ -47,6 +47,7 @@ body {
   #page-wrapper {
     margin-top:96px;
     margin-bottom:60px;
+    padding:0 @padding-large-horizontal;
   }
 }
 
